feat(test): add multi-step workflow integration test
- Created AppointmentWorkflowIntegrationTest in org.example.service
- Scripted full lifecycle journey: Book -> Filter -> Cancel -> Verify Clear
- Verified stateful service behavior across multiple checkpoints